--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,39 @@
   background-image: url("https://cdn5.vectorstock.com/i/1000x1000/70/29/black-and-white-forest-game-background-landscape-vector-14067029.jpg");
   background-size: cover;
 }
+
+#dino {
+  width: 75px;
+  height: 75px;
+  position: relative;
+  top: 225px;
+  background-image: url("https://cdn140.picsart.com/319033380165211.png?type=webp&to=min&r=640");
+  background-size: cover;
+}
+
+#rock {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  top: 175px;
+  left: 550px;
+  background-image: url("http://pixelartmaker-data-78746291193.nyc3.digitaloceanspaces.com/image/da268f06e621b21.png");
+  background-size: cover;
+  /* animation: rock 1.33s infinite; */
+}
+
+@keyframes rock {
+  0% {left: 550px}
+  100% {left: -20px}
+}
+
+.jump-animation {
+  animation: jump 0.5s;
+}
+
+@keyframes jump {
+  0% {top: 225px}
+  50% {top: 75px}
+  75% {top: 75px}
+  100% {top: 225px;}
+}
